--- a/javascript/bower.json
+++ b/javascript/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "requirejs": "~2.1.15",
     "react": "~0.11.2",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "keymaster": "~1.6.2"
   }
 }
