--- a/javascript/bower.json
+++ b/javascript/bower.json
@@ -19,6 +19,7 @@
     "requirejs": "~2.1.15",
     "react": "~0.11.2",
     "underscore": "~1.7.0",
-    "keymaster": "~1.6.2"
+    "keymaster": "~1.6.2",
+    "seedrandom": "~2.3.10"
   }
 }
