--- a/javascript/package.json
+++ b/javascript/package.json
@@ -9,10 +9,25 @@
   "author": "Daniel Bergey <bergey@teallabs.org>",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.3.11",
-    "grunt": "^0.4.5",
-    "grunt-bower-requirejs": "^1.1.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-requirejs": "^0.4.4"
+    "browser-sync": "^1.7.0",
+    "browserify": "^6.3.2",
+    "del": "^0.1.3",
+    "gulp": "^3.8.10",
+    "gulp-filter": "^1.0.2",
+    "gulp-gh-pages": "^0.4.0",
+    "gulp-replace": "^0.5.0",
+    "gulp-requirejs": "^0.1.3",
+    "gulp-ruby-sass": "^0.7.1",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1",
+    "run-sequence": "^1.0.1",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.1.1"
+  },
+  "dependencies": {
+    "keymaster": "^1.6.2",
+    "lodash": "^2.4.1",
+    "react": "^0.12.1",
+    "seedrandom": "^2.3.10"
   }
 }
