--- a/javascript/package.json
+++ b/javascript/package.json
@@ -11,10 +11,12 @@
   "devDependencies": {
     "browser-sync": "^1.7.0",
     "browserify": "^6.3.2",
+    "chai": "^1.10.0",
     "del": "^0.1.3",
     "gulp": "^3.8.10",
     "gulp-filter": "^1.0.2",
     "gulp-gh-pages": "^0.4.0",
+    "gulp-mocha": "^2.0.0",
     "gulp-replace": "^0.5.0",
     "gulp-requirejs": "^0.1.3",
     "gulp-ruby-sass": "^0.7.1",
