--- a/javascript/package.json
+++ b/javascript/package.json
@@ -22,6 +22,8 @@
     "gulp-ruby-sass": "^0.7.1",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
+    "mocha-clean": "^0.4.0",
+    "quick_check": "^0.3.0",
     "run-sequence": "^1.0.1",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.1.1"
