--- a/purescript/package.json
+++ b/purescript/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "grunt": "^0.4.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt-purescript": "^0.6.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
