--- a/purescript/bower.json
+++ b/purescript/bower.json
@@ -23,6 +23,8 @@
     "purescript-monad-eff": "~0.1.0",
     "purescript-refs": "~0.1.2",
     "purescript-arrays": "~0.3.3",
-    "purescript-random": "~0.1.2"
+    "purescript-random": "~0.1.2",
+    "keymaster": "~1.6.3",
+    "purescript-dom": "~0.1.1"
   }
 }
